--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ktfootball-admin",
   "version": "0.1.0",
+  "homepage": "http://yjjtt.top/kt-backstage/",
   "private": true,
   "dependencies": {
     "antd": "^3.15.1",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
